--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -51,14 +51,12 @@ $color-sistema-h: #F6F6F6
 
 $color-institucional: #39A900
 
-
 // Colores Curso ---------------------------------------
-
-$color-primario: #522981
-$color-secundario: #7DD3E9
-$color-acento-contenido: #FF4A69
-$color-acento-botones: #FFCD0D
-$color-adicional-1: #CDDC39
+$color-primario: #BACBEC
+$color-secundario: #F7ECA4
+$color-acento-contenido: #FF4947
+$color-acento-botones: #F89C33
+$color-adicional-1: #E2DACC
 $color-adicional-2: #00BCD4
 
 // Color Tipografias -----------------------------------
@@ -79,7 +77,7 @@ $color-btn-texto: $color-sistema-texto
 
 // Colores banner --------------------------------------
 $color-banner-fondo: $color-primario
-$color-banner-text: $white
+$color-banner-text: $color-sistema-texto
 
 // Colores anexos
 $color-fondo-anexo: $color-sistema-g
